@@ -14,6 +14,10 @@ This release includes the following changes:
 This release includes the following bugfixes:
 
  o The windows makefiles work again
+ o libcurl-NSS acknowledges verifyhost
+ o SIGSEGV when pipelined pipe unexpectedly breaks
+ o data corruption issue with re-connected transfers
+ o use after free if we're completed but easy_conn not NULL (pipelined)
 
 This release includes the following known bugs:
 
@@ -22,6 +26,6 @@ This release includes the following known bugs:
 This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
- Karl Moerder
+ Karl Moerder, Kamil Dudka, Krister Johansen,
 
         Thanks! (and sorry if I forgot to mention someone)
